[package]
name = "diver_viz"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2" }
geozero = { version = "0.14.0", features = ["with-mvt"] }
csgrs = { git = "https://github.com/Hattiffnat/csgrs.git", branch="update_bevy_version", features=["bevymesh"] }
serde = { version = "1.0.228", features = ["derive"] }
bevy_http_client = "0.9.0"

[profile.release]
# make small
opt-level = "z"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"